test/e2e/testing-manifests/ingress/neg-clusterip/ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hostname
spec:
  backend:
    serviceName: hostname
    servicePort: 80
