test/e2e/testing-manifests/ingress/neg-clusterip/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hostname
  annotations:
  annotations:
    cloud.google.com/neg: '{"ingress":true,"exposed_ports":{"500":{},"999":{}}}'
spec:
  ports:
  - port: 80
    name: host1
    protocol: TCP
    targetPort: 8080
  - port: 443
    name: host2
    protocol: TCP
    targetPort: 8443
  - port: 500
    name: host3
    protocol: TCP
    targetPort: 8500
  - port: 999
    name: host4
    protocol: TCP
    targetPort: 8999
  selector:
    run: hostname
  sessionAffinity: None
  type: ClusterIP
